# tiny-earth

./: .editorconfig  .gdlintrc  .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSE  LICENSES.md  README.md  new.md  primary_prompt.md  seed.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  gdscript.yml  pipeline-test.yml  python.yml
docs/: PIPELINE.md  REFERENCES.md  RESEARCH.md  ROADMAP.md  collision-fix-handoff.md  koppen-biome-handoff.md  phase1-handoff.md  phase2-handoff.md  phase3-handoff.md  phase4-handoff.md  phase5-handoff.md
docs/adr/: 001-engine-godot.md  002-cube-sphere.md  003-python-pipeline.md  004-chunk-format.md  005-hybrid-visual-style.md
engine/: icon.svg.import  project.godot
engine/audio/: clair_de_lune.mp3.import
engine/planet/: city_lights.png.import  earth_biome_map.png.import  planet_config.json  star_map.png.import
engine/scenes/: main_menu.tscn  world.tscn
engine/scripts/: settings.gd  settings.gd.uid
engine/shaders/: inner_globe.gdshader  inner_globe.gdshader.uid  inner_globe_blocks.gdshader  inner_globe_glass.gdshader  inner_voxel.gdshader  inner_voxel.gdshader.uid  sky_space.gdshader  sky_space.gdshader.uid  voxel.gdshader  (+3 more)
pipeline/: .coverage  pyproject.toml  requirements-phase3.txt  requirements-phase4.txt  requirements.txt
pipeline/config/: planet.yaml
pipeline/src/: biomes.py  citylights.py  cube_sphere.py  debug_hollow.py  debug_interior.py  download.py  elevation.py  export.py  interior.py  landmask.py  render_map.py  starmap.py
pipeline/tests/: test_cube_sphere.py  test_elevation.py  test_export.py  test_landmask.py
(+122 files in other folders)
