[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tiny-earth-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gdal>=3.8",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy>=1.26",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"
