[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-earth-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "netCDF4>=1.6",
    "shapely>=2.0",
    "pyshp>=2.3",
    "rasterio>=1.3",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "../data"]

[tool.ruff.lint]
# Pragmatic, not pedantic: pyflakes (F), import sort (I), common bugbears (B),
# pycodestyle (E/W), and pyupgrade (UP). Line length is left to the formatter.
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
